<resources>
    <string name="app_name">EatSure</string>
    <string name="welcome">Welcome to Eat Sure</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">Enter Password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="moto">Eat Good\nFeel Good</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">"LogOut"</string>
    <string name="change_password">"Change Password"</string>
    <string name="edit_profile">"Edit Profile"</string>
    <string name="general_settings">"General Settings"</string>
    <string name="loading">"Loading"</string>
    <string name="profile_image">"Profile Image"</string>

    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="product_image">Product Image</string>
    <string name="disclaimer">⚠️ Disclaimer : This is an AI generated report. Please consult doctor before taking any action.</string>


</resources>